# ChangeLog for net-misc/nxnode
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/nxnode/ChangeLog,v 1.30 2008/06/16 08:51:00 voyageur Exp $

*nxnode-3.2.0-r2 (16 Jun 2008)

  16 Jun 2008; Bernard Cafarelli <voyageur@gentoo.org>
  +nxnode-3.2.0-r2.ebuild:
  Maintenance release bump, minor bugfixes

  05 Jun 2008; Peter Volkov <pva@gentoo.org> nxnode-3.2.0.ebuild:
  amd64 stable, bug #222967.

  29 May 2008; Christian Faulhammer <opfer@gentoo.org> nxnode-3.2.0.ebuild:
  x86 stable, bug #222967

*nxnode-3.2.0-r1 (28 May 2008)

  28 May 2008; Bernard Cafarelli <voyageur@gentoo.org>
  +nxnode-3.2.0-r1.ebuild:
  Maintenance release bump, minor bugfixes

*nxnode-3.2.0 (09 Apr 2008)

  09 Apr 2008; Bernard Cafarelli <voyageur@gentoo.org> +nxnode-3.2.0.ebuild:
  Version bump, new 3.2.0 series

  03 Apr 2008; Bernard Cafarelli <voyageur@gentoo.org>
  -nxnode-3.0.0-r3.ebuild:
  Remove vulnerable version, security bug #210317

  19 Mar 2008; Peter Volkov <pva@gentoo.org> nxnode-3.1.0-r2.ebuild:
  amd64 stable, security bug #210317.

  07 Mar 2008; Bernard Cafarelli <voyageur@gentoo.org>
  nxnode-3.0.0-r3.ebuild, -nxnode-3.0.0-r4.ebuild, -nxnode-3.1.0.ebuild,
  -nxnode-3.1.0-r1.ebuild, nxnode-3.1.0-r2.ebuild:
  Fix chown on license file (create nx user preventively, use nx:0), thanks pva
  Remove some versions (security bug #210317)

  18 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
  nxnode-3.1.0-r2.ebuild:
  stable x86, security bug 210317

*nxnode-3.1.0-r2 (17 Feb 2008)

  17 Feb 2008; Bernard Cafarelli <voyageur@gentoo.org>
  +nxnode-3.1.0-r2.ebuild:
  Security update, bug #210317
  Shorten DESCRIPTION

*nxnode-3.1.0-r1 (24 Jan 2008)

  24 Jan 2008; Bernard Cafarelli <voyageur@gentoo.org>
  +nxnode-3.1.0-r1.ebuild:
  Maintenance release bump

*nxnode-3.1.0 (14 Dec 2007)

  14 Dec 2007; Bernard Cafarelli <voyageur@gentoo.org>
  nxnode-3.0.0-r3.ebuild, nxnode-3.0.0-r4.ebuild, +nxnode-3.1.0.ebuild: