@@ -1,10 +1,10 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/nxnode/Attic/nxnode-3.2.0-r2.ebuild,v 1.1 2008/06/16 08:51:00 voyageur Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/nxnode/Attic/nxnode-3.2.0-r3.ebuild,v 1.1 2008/06/30 12:25:59 voyageur Exp $
 
 inherit eutils
 
-MY_PV="${PV}-10"
+MY_PV="${PV}-11"
 DESCRIPTION="shared components between the different editions of NoMachine's NX
 Servers"
 HOMEPAGE="http://www.nomachine.com/"
