@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/nxnode
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/nxnode/ChangeLog,v 1.30 2008/06/16 08:51:00 voyageur Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/nxnode/ChangeLog,v 1.31 2008/06/30 12:25:59 voyageur Exp $
+
+*nxnode-3.2.0-r3 (30 Jun 2008)
+
+  30 Jun 2008; Bernard Cafarelli <voyageur@gentoo.org>
+  -nxnode-3.2.0-r1.ebuild, -nxnode-3.2.0-r2.ebuild, +nxnode-3.2.0-r3.ebuild:
+  Security bump, bug #230147
 
 *nxnode-3.2.0-r2 (16 Jun 2008)
 
